# Algoritmos-Detecci-n-Correcci-n-Errores

./: CMakeLists.txt  main.cpp
CyclicRedundancyCheck/: CyclicRedundancyCheck.cpp  CyclicRedundancyCheck.h
HammingCode/: HammingCode.cpp  HammingCode.h
ParityCheck/: ParityCheck.cpp  ParityCheck.h
